submit before commit

--- a/Task 1/src/notebooks/tokenizer.ipynb
+++ b/Task 1/src/notebooks/tokenizer.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "623e572c-7301-4fb0-8f71-74b1e0fed16f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datapath = \"/home/ababil/BUET/Vinternship/Task 1/Transaction_Naration_Data_Set.csv\""
+    "datapath = \"/home/ababil/BUET/Vinternship/TransactionNarrationClassify/Task 1/Transaction_Naration_Data_Set.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "a59ea48b-5e41-4263-b28d-31140ae7eee0",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "c7a358f1-3bc0-4864-8320-23a83f396633",
    "metadata": {},
    "outputs": [],
@@ -39,29 +39,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "652b3626-587e-46a1-a4de-3a4f276a8d49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>AC_ID</th>\n",
+       "      <th>AMOUNT</th>\n",
+       "      <th>DOC_DATE</th>\n",
+       "      <th>NARATION</th>\n",
+       "      <th>DR_CR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3644877</td>\n",
+       "      <td>342800.00</td>\n",
+       "      <td>01-NOV-22</td>\n",
+       "      <td>Cash Withdraw</td>\n",
+       "      <td>Debit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1175256</td>\n",
+       "      <td>342800.00</td>\n",
+       "      <td>01-NOV-22</td>\n",
+       "      <td>Cash Withdrawal From A/C No.:</td>\n",
+       "      <td>Credit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2298226</td>\n",
+       "      <td>1500.00</td>\n",
+       "      <td>01-NOV-22</td>\n",
+       "      <td>Cash withdraw from Micro Merchant point, MM A/C</td>\n",
+       "      <td>Debit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4066427</td>\n",
+       "      <td>1500.00</td>\n",
+       "      <td>01-NOV-22</td>\n",
+       "      <td>Credit Against Merchant Cash Withdraw Service ...</td>\n",
+       "      <td>Credit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1978564</td>\n",
+       "      <td>2550.00</td>\n",
+       "      <td>01-NOV-22</td>\n",
+       "      <td>Cash withdraw from Micro Merchant point, MM A/C</td>\n",
+       "      <td>Debit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22546753</th>\n",
+       "      <td>22546753</td>\n",
+       "      <td>4010919</td>\n",
+       "      <td>2550.00</td>\n",
+       "      <td>29-APR-23</td>\n",
+       "      <td>Credit Against Merchant Cash Withdraw Service ...</td>\n",
+       "      <td>Credit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22546754</th>\n",
+       "      <td>22546754</td>\n",
+       "      <td>2607145</td>\n",
+       "      <td>2550.00</td>\n",
+       "      <td>29-APR-23</td>\n",
+       "      <td>Cash withdraw from Micro Merchant point, MM A/C</td>\n",
+       "      <td>Debit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22546755</th>\n",
+       "      <td>22546755</td>\n",
+       "      <td>5728508</td>\n",
+       "      <td>2550.00</td>\n",
+       "      <td>29-APR-23</td>\n",
+       "      <td>Credit Against Merchant Cash Withdraw Service ...</td>\n",
+       "      <td>Credit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22546756</th>\n",
+       "      <td>22546756</td>\n",
+       "      <td>5939099</td>\n",
+       "      <td>1512.75</td>\n",
+       "      <td>29-APR-23</td>\n",
+       "      <td>Cash withdraw from Micro Merchant point, MM A/C</td>\n",
+       "      <td>Debit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22546757</th>\n",
+       "      <td>22546757</td>\n",
+       "      <td>4632178</td>\n",
+       "      <td>1500.00</td>\n",
+       "      <td>29-APR-23</td>\n",
+       "      <td>Credit Against Merchant Cash Withdraw Service ...</td>\n",
+       "      <td>Credit</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>22546758 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Unnamed: 0    AC_ID     AMOUNT   DOC_DATE  \\\n",
+       "0                  0  3644877  342800.00  01-NOV-22   \n",
+       "1                  1  1175256  342800.00  01-NOV-22   \n",
+       "2                  2  2298226    1500.00  01-NOV-22   \n",
+       "3                  3  4066427    1500.00  01-NOV-22   \n",
+       "4                  4  1978564    2550.00  01-NOV-22   \n",
+       "...              ...      ...        ...        ...   \n",
+       "22546753    22546753  4010919    2550.00  29-APR-23   \n",
+       "22546754    22546754  2607145    2550.00  29-APR-23   \n",
+       "22546755    22546755  5728508    2550.00  29-APR-23   \n",
+       "22546756    22546756  5939099    1512.75  29-APR-23   \n",
+       "22546757    22546757  4632178    1500.00  29-APR-23   \n",
+       "\n",
+       "                                                   NARATION   DR_CR  \n",
+       "0                                             Cash Withdraw   Debit  \n",
+       "1                            Cash Withdrawal From A/C No.:   Credit  \n",
+       "2          Cash withdraw from Micro Merchant point, MM A/C    Debit  \n",
+       "3         Credit Against Merchant Cash Withdraw Service ...  Credit  \n",
+       "4          Cash withdraw from Micro Merchant point, MM A/C    Debit  \n",
+       "...                                                     ...     ...  \n",
+       "22546753  Credit Against Merchant Cash Withdraw Service ...  Credit  \n",
+       "22546754   Cash withdraw from Micro Merchant point, MM A/C    Debit  \n",
+       "22546755  Credit Against Merchant Cash Withdraw Service ...  Credit  \n",
+       "22546756   Cash withdraw from Micro Merchant point, MM A/C    Debit  \n",
+       "22546757  Credit Against Merchant Cash Withdraw Service ...  Credit  \n",
+       "\n",
+       "[22546758 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rawDf = pd.read_csv(datapath)"
+    "rawDf = pd.read_csv(datapath)\n",
+    "rawDf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "cc2456fd-d8e2-4d8f-a750-463ce2efae60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Narration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cash Withdraw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cash Withdrawal From A/C No.:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cash withdraw from Micro Merchant point, MM A/C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Credit Against Merchant Cash Withdraw Service ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cash withdraw from Micro Merchant point, MM A/C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>Cash withdraw from Micro Merchant point, MM A/C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>Credit Against Merchant Cash Withdraw Service ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>Agent Balance Transfer From Conventional To Is...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>Debit Against Debit Card Transaction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>Debit Against Debit Card Charge Transaction</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Narration\n",
+       "0                                        Cash Withdraw\n",
+       "1                       Cash Withdrawal From A/C No.: \n",
+       "2     Cash withdraw from Micro Merchant point, MM A/C \n",
+       "3    Credit Against Merchant Cash Withdraw Service ...\n",
+       "4     Cash withdraw from Micro Merchant point, MM A/C \n",
+       "..                                                 ...\n",
+       "495   Cash withdraw from Micro Merchant point, MM A/C \n",
+       "496  Credit Against Merchant Cash Withdraw Service ...\n",
+       "497  Agent Balance Transfer From Conventional To Is...\n",
+       "498               Debit Against Debit Card Transaction\n",
+       "499        Debit Against Debit Card Charge Transaction\n",
+       "\n",
+       "[500 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "narDf = rawDf[['NARATION']]\n",
     "narDf.columns = ['Narration']\n",
-    "narDf = narDf.head(500)"
+    "narDf = narDf.head(500)\n",
+    "narDf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "e1ed24e7-c6fa-4994-9d47-c51a7cd6fa07",
    "metadata": {},
    "outputs": [
@@ -123,7 +390,7 @@
        "4   cash withdraw from micro merchant point, mm a/c "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "a72f4f7d-7820-4e86-8c1d-a12b5d68f54b",
    "metadata": {},
    "outputs": [
@@ -197,7 +464,7 @@
        "4    cash withdraw from micro merchant point mm a c "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "46690c1c-f57a-4f29-8d76-c94a99e737b2",
    "metadata": {},
    "outputs": [
@@ -271,7 +538,7 @@
        "4  cash withdraw micro merchant point mm c"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,8 +551,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f78c429e-530b-41fe-87d0-5ef0f6865d93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a',\n",
+       " 'about',\n",
+       " 'above',\n",
+       " 'after',\n",
+       " 'again',\n",
+       " 'against',\n",
+       " 'ain',\n",
+       " 'all',\n",
+       " 'am',\n",
+       " 'an',\n",
+       " 'and',\n",
+       " 'any',\n",
+       " 'are',\n",
+       " 'aren',\n",
+       " \"aren't\",\n",
+       " 'as',\n",
+       " 'at',\n",
+       " 'be',\n",
+       " 'because',\n",
+       " 'been',\n",
+       " 'before',\n",
+       " 'being',\n",
+       " 'below',\n",
+       " 'between',\n",
+       " 'both',\n",
+       " 'but',\n",
+       " 'by',\n",
+       " 'can',\n",
+       " 'couldn',\n",
+       " \"couldn't\",\n",
+       " 'd',\n",
+       " 'did',\n",
+       " 'didn',\n",
+       " \"didn't\",\n",
+       " 'do',\n",
+       " 'does',\n",
+       " 'doesn',\n",
+       " \"doesn't\",\n",
+       " 'doing',\n",
+       " 'don',\n",
+       " \"don't\",\n",
+       " 'down',\n",
+       " 'during',\n",
+       " 'each',\n",
+       " 'few',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'further',\n",
+       " 'had',\n",
+       " 'hadn',\n",
+       " \"hadn't\",\n",
+       " 'has',\n",
+       " 'hasn',\n",
+       " \"hasn't\",\n",
+       " 'have',\n",
+       " 'haven',\n",
+       " \"haven't\",\n",
+       " 'having',\n",
+       " 'he',\n",
+       " 'her',\n",
+       " 'here',\n",
+       " 'hers',\n",
+       " 'herself',\n",
+       " 'him',\n",
+       " 'himself',\n",
+       " 'his',\n",
+       " 'how',\n",
+       " 'i',\n",
+       " 'if',\n",
+       " 'in',\n",
+       " 'into',\n",
+       " 'is',\n",
+       " 'isn',\n",
+       " \"isn't\",\n",
+       " 'it',\n",
+       " \"it's\",\n",
+       " 'its',\n",
+       " 'itself',\n",
+       " 'just',\n",
+       " 'll',\n",
+       " 'm',\n",
+       " 'ma',\n",
+       " 'me',\n",
+       " 'mightn',\n",
+       " \"mightn't\",\n",
+       " 'more',\n",
+       " 'most',\n",
+       " 'mustn',\n",
+       " \"mustn't\",\n",
+       " 'my',\n",
+       " 'myself',\n",
+       " 'needn',\n",
+       " \"needn't\",\n",
+       " 'no',\n",
+       " 'nor',\n",
+       " 'not',\n",
+       " 'now',\n",
+       " 'o',\n",
+       " 'of',\n",
+       " 'off',\n",
+       " 'on',\n",
+       " 'once',\n",
+       " 'only',\n",
+       " 'or',\n",
+       " 'other',\n",
+       " 'our',\n",
+       " 'ours',\n",
+       " 'ourselves',\n",
+       " 'out',\n",
+       " 'over',\n",
+       " 'own',\n",
+       " 're',\n",
+       " 's',\n",
+       " 'same',\n",
+       " 'shan',\n",
+       " \"shan't\",\n",
+       " 'she',\n",
+       " \"she's\",\n",
+       " 'should',\n",
+       " \"should've\",\n",
+       " 'shouldn',\n",
+       " \"shouldn't\",\n",
+       " 'so',\n",
+       " 'some',\n",
+       " 'such',\n",
+       " 't',\n",
+       " 'than',\n",
+       " 'that',\n",
+       " \"that'll\",\n",
+       " 'the',\n",
+       " 'their',\n",
+       " 'theirs',\n",
+       " 'them',\n",
+       " 'themselves',\n",
+       " 'then',\n",
+       " 'there',\n",
+       " 'these',\n",
+       " 'they',\n",
+       " 'this',\n",
+       " 'those',\n",
+       " 'through',\n",
+       " 'to',\n",
+       " 'too',\n",
+       " 'under',\n",
+       " 'until',\n",
+       " 'up',\n",
+       " 've',\n",
+       " 'very',\n",
+       " 'was',\n",
+       " 'wasn',\n",
+       " \"wasn't\",\n",
+       " 'we',\n",
+       " 'were',\n",
+       " 'weren',\n",
+       " \"weren't\",\n",
+       " 'what',\n",
+       " 'when',\n",
+       " 'where',\n",
+       " 'which',\n",
+       " 'while',\n",
+       " 'who',\n",
+       " 'whom',\n",
+       " 'why',\n",
+       " 'will',\n",
+       " 'with',\n",
+       " 'won',\n",
+       " \"won't\",\n",
+       " 'wouldn',\n",
+       " \"wouldn't\",\n",
+       " 'y',\n",
+       " 'you',\n",
+       " \"you'd\",\n",
+       " \"you'll\",\n",
+       " \"you're\",\n",
+       " \"you've\",\n",
+       " 'your',\n",
+       " 'yours',\n",
+       " 'yourself',\n",
+       " 'yourselves'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1298f244-8136-4d33-9045-d6c9bc7fbd8e",
    "metadata": {},
    "outputs": [],
    "source": []
